--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1{
     color:red;
+    font-size: 100px;
     background-color:aqua;
 }
 p{
@@ -11,22 +12,61 @@ p{
 #hello{
     color:crimson;
 }
-.yellow{
-    color:yellow
+.yellow {
+    color: yellow
 }
-.red-backgroud{
+.red-backgroud {
     background-color: red;
 
 }
-p{
+p {
     color: blue;
 }
-strong{
+strong {
     background-color: yellow;
 }
-em{
+em {
     background-color: red;
 }
-#example{
+#example {
     background-color: green;
+} 
+
+.example {
+background-color:green
+}
+.example1{
+    color: yellowgreen
+
+}
+.example0{
+    color: yellowgreen;
+   
+    background-color: purple;
+}
+.example2 {
+    background-color: rgb(25, 180, 180);
+}
+.example3 {
+    color: rgb(116, 12, 64);
+    background-color: rgb(231, 229, 104);
+}
+#example {
+    font-size:16px;
+}
+}
+#example1 {
+    font-size: 18px;
+}
+}
+#example0 {
+    font-size:25px ;
+}
+}
+#example2 {
+    font-size:12px ;
+}
+}
+#example3 {
+    font-size: ;
 }
